Fixes annoying bug with retina display which breaks the layout every now and then with no apparent reason 🤷🏻‍♂️🥲:

--- a/src/scss/_article.scss
+++ b/src/scss/_article.scss
@@ -59,7 +59,7 @@
 .article-selected {
     position: absolute;
     top: 139px;
-    left: 278px;
+    left: $left-alignment;
     width: 350px;
     background-color: white;
     border: 1px solid lightgrey;
