--- a/src/scss/_button.scss
+++ b/src/scss/_button.scss
@@ -1,7 +1,7 @@
 .map-button {
     position: absolute;
     height: 21px;
-    left: 212px;
+    left: 223px;
     width: 23px;
     top: 10px;
     border-radius: 3px;
@@ -24,7 +24,7 @@
 .options-button {
     position: absolute;
     height: 21px;
-    left: 239px;
+    left: 249px;
     width: 23px;
     top: 10px;
     border-radius: 3px;
