--- a/src/scss/_tfl.scss
+++ b/src/scss/_tfl.scss
@@ -303,7 +303,7 @@
 
 .popup {  
     position: absolute;
-    left: 278px;
+    left: $left-alignment;
     top: 199px;
     border: 1px solid lightgray;
     border-radius: 4px;
