--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -2,7 +2,7 @@ $font-stack: Open Sans;
 $grey-color: #777;
 $white-color: #DDD;
 $white2-color: rgb(238, 238, 238);
-$darkgrey-color: rgb(119, 119, 119);
+$darkgrey-color: rgb(100, 100, 100);
 $softgrey-color: #BBB;
 $softgrey2-color: #CCC;
 $background-color: #eee;
@@ -10,4 +10,5 @@ $border-color: #d4d4d1;
 $background2-color: #fff;
 $tabsmenu-color: #AAA;
 $blue-color: #2e7da3;
+$left-alignment: 280px;
 
