--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -21,7 +21,7 @@
     margin: 15px;
     font-size: 85%;
     color: #777;
-    width: 276px; // TODO: What is going on with this?
+    width: 277px; // TODO: What is going on with this?
     font-family: $font-stack;
     z-index: 99999 !important;
     background-color: transparent;
